[package]
name = "trek-router"
version = "0.0.2"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "A flexible router for RESTful APIs"
repository = "https://github.com/trek-rs/router"
documentation = "https://github.com/trek-rs/router/"
readme = "README.md"
keywords = ["radix", "tree", "path", "router"]
license = "MIT/Apache-2.0"

[dependencies]
path-tree = "^0.1"
http = "^0.1"
lazy_static = "^1.3"
Inflector = "0.11"

[dev-dependencies]
hyper = "^0.12"
futures = "^0.1"

[[example]]
name = "hello"
path = "examples/hello.rs"
